Upgrade dependencies (#4376)
* upgrade dependencies

* beforeEach shouldn't be private

* handle failing tests

* add jre range limit for cglib

* migrate to junit5

* make aftereach package private

* revert jboss-logging upgrade

* try overriding jvm args for spring-boot2 test

* add jvm args for cglib in spring-boot tests

* update dependencies

* add a desc for hibernate-validator 7